--- a/1-HTML/3listForHtml.html
+++ b/1-HTML/3listForHtml.html
@@ -8,9 +8,19 @@
     <! –– Unordered List ––>
      <ul>
        <li>Tea</li>
-       <li>Coffee</li>
+       <li>Coffee <ul>
+         <li>With Milk</li>
+         <li>Without Milk</li>
+       </ul></li>
        <li>Lemonade</li>
        <li>Coke</li>
      </ul>
+     <! –– Ordered List ––>
+     <ol>
+       <li>Tea</li>
+       <li>Coffee</li>
+       <li>Lemonade</li>
+       <li>Coke</li>
+     </ol>
   </body>
 </html>
