--- a/1-HTML/3listForHtml.html
+++ b/1-HTML/3listForHtml.html
@@ -22,5 +22,26 @@
        <li>Lemonade</li>
        <li>Coke</li>
      </ol>
+
+     <ol type="A">
+       <li>Tea</li>
+       <li>Coffee</li>
+       <li>Lemonade</li>
+       <li>Coke</li>
+     </ol>
+
+     <ol type="I">
+       <li>Tea</li>
+       <li>Coffee</li>
+       <li>Lemonade</li>
+       <li>Coke</li>
+     </ol>
+
+     <ol start="10">
+       <li>Tea</li>
+       <li>Coffee</li>
+       <li>Lemonade</li>
+       <li>Coke</li>
+     </ol>
   </body>
 </html>
