--- a/1-HTML/3listForHtml.html
+++ b/1-HTML/3listForHtml.html
@@ -43,5 +43,13 @@
        <li>Lemonade</li>
        <li>Coke</li>
      </ol>
+
+     <dl>
+       <dt>HTML</dt>
+       <dd>Hypertest Markup Language</dd>
+       <dt>CSS</dt>
+       <dd>Cascading Style</dd>
+
+     </dl>
   </body>
 </html>
