--- a/2-CSS/6Debugging.html
+++ b/2-CSS/6Debugging.html
@@ -12,7 +12,8 @@
       color:purple;
     }
   </style>
-  <!-- linking to our Css new file -->
+
+   <!- linking to our Css new file -->
   <style media="screen">
     body{
       background-color: blue;
