--- a/2-CSS/18GridAndFlexProject3.html
+++ b/2-CSS/18GridAndFlexProject3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="top_Container">
+  <div class="top-container">
     <!-- Section 1 -->
     <nav class="main-nav">
       <ul>
@@ -24,7 +24,7 @@
 
     <!-- Section2 -->
     <div class="flexContainer">
-      <img src="Pictures/css1.jpg" width="200" alt="">
+      <img src="Pictures/css3.jpg" width="300" alt="">
       <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
