--- a/3-Bootstrap/WebDevelopmentProject/5OurCss/index.html
+++ b/3-Bootstrap/WebDevelopmentProject/5OurCss/index.html
@@ -7,15 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootsrap Project</title>
 
-    <!-- CDN CSS -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Style CSS -->
+
 </head>
 
 <body>
     <!-- Navbar Section -->
     <!-- <nav class="navbar navbar-expand-lg navbar-dark " style=" background-color: #2cda2c;"> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
         <a class="navbar-brand" href="#">Bootstrap </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -45,8 +52,9 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col">
-                        <h1 style="margin-top:250px;" class="display-4">Bootstrap Responsive web pages</h1>
-                        <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi dolor a
+                        <h1 class="display-4">Bootstrap Responsive web pages</h1>
+                        <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi dolor
+                            a
                             ipsa eaque
                             voluptatibus nemo assumenda repellat fuga. Eveniet inventore perferendis eligendi alias
                             unde. Delectus quis soluta omnis? Temporibus, magni?</p>
