--- a/3-Bootstrap/WebDevelopmentProject/FontAwesome/index.html
+++ b/3-Bootstrap/WebDevelopmentProject/FontAwesome/index.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Style CSS -->
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/c2b3d782a9.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
+
 </head>
 
 <body>
@@ -74,19 +78,48 @@
 
         </div>
     </header>
+    <!-- Header Section -->
 
 
-    <!-- Optinal JavaScript -->
-    <!-- Jquery first, then Popper.js, then Bpptstrap JS... -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <!-- FeaturesSection -->
+    <section id="feature" class="pt-5">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-4 text-center">
+                    <i class="fa-solid fa-archway fa-4x"></i>
+                    <h3 class="mt-3">Easy Learning</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quia quibusdam iste quaerat
+                        non cumque excepturi est at accusamus odio id esse, modi delectus cupiditate dolorum repellendus
+                        ut perspiciatis corrupti.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fa-solid fa-box-tissue fa-4x"></i>
+                    <h3 class="mt-3">Innovative Technology</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quia quibusdam iste quaerat
+                        non cumque excepturi est at accusamus odio id esse, modi delectus cupiditate dolorum repellendus
+                        ut perspiciatis corrupti.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fa-solid fa-bolt fa-4x"></i>
+                    <h3 class="mt-3">First Aid Support</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quia quibusdam iste quaerat
+                        non cumque excepturi est at accusamus odio id esse, modi delectus cupiditate dolorum repellendus
+                        ut perspiciatis corrupti.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+    <!-- FeaturesSection -->
+
 </body>
 
 </html>
