--- a/4-IntermediateBootstrap/WebDevelopmentProject/10Gallery/index.html
+++ b/4-IntermediateBootstrap/WebDevelopmentProject/10Gallery/index.html
@@ -343,6 +343,164 @@
     <!-- Our History -->
 
 
+    <!-- Image Gallery -->
+    <section id="gallery">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="imageContainer">
+                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <div class="imgOverlay">
+                            <div class="imgText">
+                                <h4>Web Desgin</h4>
+                                <p>Code Design</p>
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+    <!-- Image Gallery -->
+
+
 
 
 </body>
