--- a/4-IntermediateBootstrap/WebDevelopmentProject/11Forms/index.html
+++ b/4-IntermediateBootstrap/WebDevelopmentProject/11Forms/index.html
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img2.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -385,7 +385,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img3.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -402,7 +402,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img3.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -422,7 +422,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img4.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -439,7 +439,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img5.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -456,7 +456,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img6.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -474,7 +474,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="imageContainer">
-                        <img src="images/img1.jpg" class="img-fluid" alt="">
+                        <img src="images/img7.jpg" class="img-fluid" alt="">
                         <div class="imgOverlay">
                             <div class="imgText">
                                 <h4>Web Desgin</h4>
@@ -500,7 +500,57 @@
 
     <!-- Image Gallery -->
 
+    <!-- Footer Section -->
 
+    <footer id="footer" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="first content">
+                        <h2>Follow Us</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam dolor ad id? Maiores,
+                            autem, ex ipsam eos laboriosam nemo ratione consequatur unde illo ea quasi doloribus
+                            repellendus sint dolore atque!</p>
+
+                    </div>
+                    <div class="social d-flex flex-row">
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+
+                    </div>
+
+                </div>
+                <div class="col-md-6">
+                    <div class="second content">
+                        <h2>Contact Us</h2>
+                        <form class="" action="index-html" method="post">
+                            <div class="email">
+                                <div class="text py-2">
+                                    Email *
+                                </div>
+                                <input type="email" class="py-2" name="" value="">
+                            </div>
+
+                            <div class="msg">
+                                <div class="text py-2" color="white">
+                                    Message *
+                                </div>
+                                <textarea name="name" rows="2" cols="30"></textarea>
+                            </div>
+                            <div class="btn">
+                                <button type="submit" name="button">Send</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </footer>
+
+
+
+    <!-- Footer Section -->
 
 
 </body>
