fixed some mistakes

--- a/5-Javascript/34-ToDoListQuiz/index.html
+++ b/5-Javascript/34-ToDoListQuiz/index.html
@@ -41,10 +41,10 @@
     <h4>TO-DO LIST</h4>
 
     <ul>
-        <li class="todoitem">Go to school</li>
-        <li class="todoitem">Go to gym</li>
-        <li class="todoitem">Go to shopping</li>
-        <li class="todoitem">Cook dinner</li>
+        <li class="todoItem">Go to school</li>
+        <li class="todoItem">Go to gym</li>
+        <li class="todoItem">Go to shopping</li>
+        <li class="todoItem">Cook dinner</li>
     </ul>
 
 
