TodoListQuiz, and JavaScriptFinished

--- a/5-Javascript/34-ToDoListQuiz/index.html
+++ b/5-Javascript/34-ToDoListQuiz/index.html
@@ -19,6 +19,11 @@
             background-color: red;
             color: white;
         }
+
+        .okay {
+            text-decoration: line-through;
+            color: gray;
+        }
     </style>
 </head>
 
